bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 3.0.0
-------------
* API
  + hwloc_get_type_depth_with_attr() generalizes hwloc_get_type_depth() by
    using object attributes to disambiguate multiple levels with same type.
    - hwloc_type_sscanf_as_depth() is deprecated in favor of
      hwloc_type_sscanf() followed by hwloc_get_type_depth_with_attr().
  + PCI domains are now always 32bits.
  + The "programming interface" of PCI devices is now exposed
    in PCI object attributes.
* Removed features
  + BlueGene/Q support.
  + Functions that were deprecated since 2.0:
    - hwloc_topology_insert_misc_object_by_parent()
    - hwloc_obj_cpuset_snprintf()
    - hwloc_obj_type_sscanf()
    - hwloc_cpuset_to_nodeset_strict()
    - hwloc_cpuset_from_nodeset_strict()
  + HWLOC_PCI_<domain>_<bus>_LOCALCPUS environment variables,
    superseded with a single HWLOC_PCI_LOCALITY since 2.0.


Version 2.9.0
-------------
* Backends
  + Expose the memory size of CXL memory device (Type 3) on Linux.
  + The LevelZero backend now reports the "XeLinkBandwidth" distance
    matrix between L0 devices (and subdevices) when available.
  + Add support for CUDA compute capability up to 9.0.
* Tools
  + lstopo now switches to console mode when its output is redirected.
    Graphical window mode may be forced back with --of window.
  + hwloc-calc now accepts "numa" in -H, and I/O subtypes such as "gpu"
    in -I and -N.


Version 2.8.0
-------------
* API
  + Add HWLOC_TOPOLOGY_FLAG_NO_DISTANCES, _NO_MEMATTRS and _NO_CPUKINDS
    to reduce the overhead when unneeded.
  + Add separate Read/Write Bandwidth/Latency memory attributes and
    implement them on Linux.
* Backends
  + NUMA nodes may now have a subtype such as DRAM, HBM, SPM, or NVM
    on heterogeneous memory platforms on Linux.
    - Add DAXType and DAXParent attributes on Linux to tell where a
      DAX device or its corresponding NUMA node come from (SPM for