@@ -517,8 +517,9 @@ static const char* hwloc_obj_cache_type_letter(hwloc_obj_cache_type_t type)
 }
 
 int
-hwloc_obj_type_snprintf(char * __hwloc_restrict string, size_t size, hwloc_obj_t obj, int verbose)
+hwloc_obj_type_snprintf(char * __hwloc_restrict string, size_t size, hwloc_obj_t obj, unsigned long flags)
 {
+  int longnames = (flags & HWLOC_OBJ_SNPRINTF_FLAG_OLD_VERBOSE);
   hwloc_obj_type_t type = obj->type;
   switch (type) {
   case HWLOC_OBJ_MISC:
@@ -540,7 +541,7 @@ hwloc_obj_type_snprintf(char * __hwloc_restrict string, size_t size, hwloc_obj_t
   case HWLOC_OBJ_L3ICACHE:
     return hwloc_snprintf(string, size, "L%u%s%s", obj->attr->cache.depth,
 			  hwloc_obj_cache_type_letter(obj->attr->cache.type),
-			  verbose ? "Cache" : "");
+			  longnames ? "Cache" : "");
   case HWLOC_OBJ_GROUP:
     if (obj->attr->group.depth != (unsigned) -1)
       return hwloc_snprintf(string, size, "%s%u", hwloc_obj_type_string(type), obj->attr->group.depth);
@@ -556,11 +557,11 @@ hwloc_obj_type_snprintf(char * __hwloc_restrict string, size_t size, hwloc_obj_t
   case HWLOC_OBJ_OS_DEVICE:
     switch (obj->attr->osdev.type) {
     case HWLOC_OBJ_OSDEV_BLOCK: return hwloc_snprintf(string, size, "Block");
-    case HWLOC_OBJ_OSDEV_NETWORK: return hwloc_snprintf(string, size, verbose ? "Network" : "Net");
+    case HWLOC_OBJ_OSDEV_NETWORK: return hwloc_snprintf(string, size, longnames ? "Network" : "Net");
     case HWLOC_OBJ_OSDEV_OPENFABRICS: return hwloc_snprintf(string, size, "OpenFabrics");
     case HWLOC_OBJ_OSDEV_DMA: return hwloc_snprintf(string, size, "DMA");
     case HWLOC_OBJ_OSDEV_GPU: return hwloc_snprintf(string, size, "GPU");
-    case HWLOC_OBJ_OSDEV_COPROC: return hwloc_snprintf(string, size, verbose ? "Co-Processor" : "CoProc");
+    case HWLOC_OBJ_OSDEV_COPROC: return hwloc_snprintf(string, size, longnames ? "Co-Processor" : "CoProc");
     default:
       if (size > 0)
 	*string = '\0';
@@ -575,8 +576,9 @@ hwloc_obj_type_snprintf(char * __hwloc_restrict string, size_t size, hwloc_obj_t
 }
 
 int
-hwloc_obj_attr_snprintf(char * __hwloc_restrict string, size_t size, hwloc_obj_t obj, const char * separator, int verbose)
+hwloc_obj_attr_snprintf(char * __hwloc_restrict string, size_t size, hwloc_obj_t obj, const char * separator, unsigned long flags)
 {
+  int verbose = (flags & HWLOC_OBJ_SNPRINTF_FLAG_OLD_VERBOSE);
   const char *prefix = "";
   char *tmp = string;
   ssize_t tmplen = size;
